--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a class="nav-link" href="#" title="Newsroom">Newsroom</a>
                     </li>
                     <li class="nav-item">
-                        <span title="About Us" style="cursor: pointer; color: yellow;" class="nav-link introBtn" aria-current="page">About Us</span>
+                        <span title="About Us" style="cursor: pointer; color: #f5c36f;" class="nav-link introBtn" aria-current="page">About Us</span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" title="Contact">Contact Us</a>
