--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
         </div>
     </div>
     <!-- footer -->
-    <section style="background-color:rgb(21, 48, 72);">
+    <section style="background-color:rgb(23 62 96);">
         <div class="container h-100 py-5">
             <div class="row m-0 py-5 h-100 align-items-center">
                 <footer>
