--- a/index.html
+++ b/index.html
@@ -376,11 +376,11 @@
     <!-- Milestones -->
     <section style="background-color:#438945; padding-bottom: 5%; padding-top:5%;">
         <div class="container">
-            <div class="mb-5 threeLines">
-                <div class="mx-auto my-2" style="width: 100px; height:2px; background-color: #d69533;"></div>
-                <div class="mx-auto my-2" style="width: 65px; height:2px; background-color: #d69533;"></div>
-                <div class="mx-auto my-2" style="width: 45px; height:2px; background-color: #d69533;"></div>
-            </div>
+            <!--  <div class="mb-5 threeLines">
+                    <div class="mx-auto my-2" style="width: 100px; height:2px; background-color: #d69533;"></div>
+                    <div class="mx-auto my-2" style="width: 65px; height:2px; background-color: #d69533;"></div>
+                    <div class="mx-auto my-2" style="width: 45px; height:2px; background-color: #d69533;"></div>
+                </div> -->
             <div class="row milestone non-hero">
                 <span style="width:2px; background-color: green;" class="trigger_ms"></span>
                 <h2 class="text-center text-white">Our Milestones</h2>
@@ -646,6 +646,27 @@
             </div>
         </div>
     </div>
+    <!-- newsroom / blog -->
+    <section style="padding:5% 0; background-color: green;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <figure class="snip1208">
+                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample66.jpg" alt="sample66" />
+                        <figcaption>
+                            <h3>The World Ended Yesterday</h3>
+                            <p>
+                                I don't need to compromise my principles, because they don't have the slightest bearing on what happens to me anyway.
+                            </p>
+                            <button>Read More</button>
+                        </figcaption><a href="#"></a>
+                    </figure>
+                </div>
+                <div class="col-md-3"></div>
+                <div class="col-md-3"></div>
+            </div>
+        </div>
+    </section>
     <!-- footer -->
     <section style="background-color:rgb(23 62 96);">
         <div class="container h-100 py-5">
