--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a class="nav-link" href="#" title="Newsroom">Newsroom</a>
                     </li>
                     <li class="nav-item">
-                        <span title="About Us" style="cursor: pointer; color: #f5c36f;" class="nav-link introBtn" aria-current="page">About Us</span>
+                        <span title="About Us" style="cursor: pointer;" class="nav-link introBtn" aria-current="page">About Us</span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" title="Contact">Contact Us</a>
@@ -463,6 +463,7 @@
                                     <p class="card__apply">
                                         <a class="card__link" href="#">View Details <i class="fas fa-arrow-right"></i></a>
                                     </p>
+                                    <a class="tileClick" href=""></a>
                                 </div>
                             </div>
                         </div>
@@ -474,6 +475,7 @@
                                     <p class="card__apply">
                                         <a class="card__link" href="#">View Details <i class="fas fa-arrow-right"></i></a>
                                     </p>
+                                    <a class="tileClick" href=""></a>
                                 </div>
                             </div>
                         </div>
@@ -485,6 +487,7 @@
                                     <p class="card__apply">
                                         <a class="card__link" href="#">View Details <i class="fas fa-arrow-right"></i></a>
                                     </p>
+                                    <a class="tileClick" href=""></a>
                                 </div>
                             </div>
                         </div>
@@ -496,6 +499,7 @@
                                     <p class="card__apply">
                                         <a class="card__link" href="#">View Details <i class="fas fa-arrow-right"></i></a>
                                     </p>
+                                    <a class="tileClick" href=""></a>
                                 </div>
                             </div>
                         </div>
@@ -647,26 +651,99 @@
         </div>
     </div>
     <!-- newsroom / blog -->
-    <section style="padding:5% 0; background-color: green;">
+    <section class="non-hero newsroom" style="padding:6% 0;">
         <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    <figure class="snip1208">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample66.jpg" alt="sample66" />
-                        <figcaption>
+            <h2 class="text-center" style="margin-bottom: 60px;">Newsroom style 1</h2>
+            <div class="row g-0" style="border-radius: 15px;">
+                <div class="col">
+                    <div style="background-color:#168086; padding: 40px 40px; height: 100%;">
+                        <h5 class="text-white">Latest updates</h5>
+                        <div class="py-4 newsblock" style="border-bottom: solid 1px #bebebe;">
+                            <a href="">
+                                <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam expedita reiciendis eveniet iure quia et.</p>
+                                <i class="bi bi-arrow-right"></i>
+                            </a>
+                        </div>
+                        <div class="py-4 newsblock" style="border-bottom: solid 1px #bebebe;">
+                            <a href="">
+                                <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam expedita reiciendis eveniet iure quia et.</p>
+                                <i class="bi bi-arrow-right"></i>
+                            </a>
+                        </div>
+                        <div class="py-4 newsblock" style="border-bottom: solid 1px #bebebe;">
+                            <a href="">
+                                <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam expedita reiciendis eveniet iure quia et.</p>
+                                <i class="bi bi-arrow-right"></i>
+                            </a>
+                        </div>
+                        <div class="mt-3">
+                            <p>
+                                <a class="view_more_btn" href="#">Read More</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-7 d-flex justify-content-end align-items-center" style="background-color:#d69533;">
+                    <img style="opacity:1; width: 100%; height: 100%; object-fit: cover;" class="img-fluid" src="assets/images/news.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--     <section class="non-hero" style="padding:5% 0;">
+            <div class="container">
+                <h2 class="text-center" style="margin-bottom: 60px;">Newsroom style 2</h2>
+                <div class="row">
+                    <div class="col-md-3">
+                        <figure class="snip1208">
+                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample66.jpg" alt="sample66" />
+                            <figcaption>
                             <h3>The World Ended Yesterday</h3>
                             <p>
                                 I don't need to compromise my principles, because they don't have the slightest bearing on what happens to me anyway.
                             </p>
                             <button>Read More</button>
-                        </figcaption><a href="#"></a>
-                    </figure>
+                            </figcaption><a href="#"></a>
+                        </figure>
+                    </div>
+                    <div class="col-md-3">
+                        <figure class="snip1208">
+                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample66.jpg" alt="sample66" />
+                            <figcaption>
+                            <h3>The World Ended Yesterday</h3>
+                            <p>
+                                I don't need to compromise my principles, because they don't have the slightest bearing on what happens to me anyway.
+                            </p>
+                            <button>Read More</button>
+                            </figcaption><a href="#"></a>
+                        </figure>
+                    </div>
+                    <div class="col-md-3">
+                        <figure class="snip1208">
+                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample66.jpg" alt="sample66" />
+                            <figcaption>
+                            <h3>The World Ended Yesterday</h3>
+                            <p>
+                                I don't need to compromise my principles, because they don't have the slightest bearing on what happens to me anyway.
+                            </p>
+                            <button>Read More</button>
+                            </figcaption><a href="#"></a>
+                        </figure>
+                    </div>
+                    <div class="col-md-3">
+                        <figure class="snip1208">
+                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample66.jpg" alt="sample66" />
+                            <figcaption>
+                            <h3>The World Ended Yesterday</h3>
+                            <p>
+                                I don't need to compromise my principles, because they don't have the slightest bearing on what happens to me anyway.
+                            </p>
+                            <button>Read More</button>
+                            </figcaption><a href="#"></a>
+                        </figure>
+                    </div>
                 </div>
-                <div class="col-md-3"></div>
-                <div class="col-md-3"></div>
             </div>
-        </div>
-    </section>
+        </section> -->
     <!-- footer -->
     <section style="background-color:rgb(23 62 96);">
         <div class="container h-100 py-5">
@@ -679,7 +756,7 @@
                             </div>
                         </div>
                         <div class="row py-3">
-                            <span class="caption pb-3 text-uppercase" style="color:#df6666; font-size: 13px;">Contact Details :</span>
+                            <span class="caption pb-3 text-uppercase" style="color:#f5b04a; font-size: 13px;">Contact Details :</span>
                             <div class="col-md-4">
                                 <p class="styled-subtitle">Address : <a target="_blank" href="https://www.google.com/maps/dir//KARMA+GROUP+Above+Dhejung+Honda+Showroom+Babesa-Thimphu+Expressway+Thimphu/@27.4512679,89.6552072,16z/data=!4m8!4m7!1m0!1m5!1m1!1s0x39e193d365cd7211:0x27225fe531521d4e!2m2!1d89.6552072!2d27.4512679" title="View location">3Floor, Building 2, Norzin Lam, <br> PO Box 1570 Thimphu, Bhutan 11001</a></p>
                             </div>
@@ -691,18 +768,18 @@
                             </div>
                         </div>
                         <!--  <div class="row py-3 justify-content-between">
-                                <span class="caption pb-3 text-uppercase" style="color:#df6666; font-size: 13px;">We'd Love to Hear From You :</span>
+                                <span class="caption pb-3 text-uppercase" style="color:#f5b04a; font-size: 13px;">We'd Love to Hear From You :</span>
                                 <div class="col-md-6">
                                     <a href="">
                                         <svg class="myBtn-p" xmlns="http://www.w3.org/2000/svg" width="200" height="40" viewBox="0 0 220 60">
-                                            <rect x="-35" y="0" width="180" height="60" rx="30" ry="30" fill="#df6666" style="opacity: 0.9;" />
+                                            <rect x="-35" y="0" width="180" height="60" rx="30" ry="30" fill="#f5b04a" style="opacity: 0.9;" />
                                             <text transform="translate(52 38)" text-anchor="middle" font-size="20" fill="#fff">Contact us</text>
                                         </svg>
                                     </a>
                                 </div>
                             </div> -->
                         <div class="row py-3 social">
-                            <span class="caption pb-3 text-uppercase" style="color:#df6666; font-size: 13px;">Follow us on :</span>
+                            <span class="caption text-uppercase" style="color:#f5b04a; font-size: 13px;">Follow us on :</span>
                             <ul class="list-unstyled">
                                 <li class="d-inline-block"><a href=""><i class="pe-2 fab fa-facebook-f"></i></a></li>
                                 <li class="d-inline-block ps-4"><a href=""><i class="pe-2 fab fa-instagram"></i></a></li>
