--- a/index.html
+++ b/index.html
@@ -653,27 +653,27 @@
     <!-- newsroom / blog -->
     <section class="non-hero newsroom" style="padding:6% 0;">
         <div class="container">
-            <h2 class="text-center" style="margin-bottom: 60px;">Newsroom style 1</h2>
+            <h2 class="text-center" style="margin-bottom: 60px;">Newsroom</h2>
             <div class="row g-0" style="border-radius: 15px;">
                 <div class="col">
                     <div style="background-color:#168086; padding: 40px 40px; height: 100%;">
-                        <h5 class="text-white">Latest updates</h5>
+                        <h5 style="color:#e3e3e3;">Latest updates</h5>
                         <div class="py-4 newsblock" style="border-bottom: solid 1px #bebebe;">
                             <a href="">
-                                <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam expedita reiciendis eveniet iure quia et.</p>
                                 <i class="bi bi-arrow-right"></i>
+                                <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam expedita reiciendis eveniet iure quia et.</p>
                             </a>
                         </div>
                         <div class="py-4 newsblock" style="border-bottom: solid 1px #bebebe;">
                             <a href="">
-                                <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam expedita reiciendis eveniet iure quia et.</p>
                                 <i class="bi bi-arrow-right"></i>
+                                <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam expedita reiciendis eveniet iure quia et.</p>
                             </a>
                         </div>
                         <div class="py-4 newsblock" style="border-bottom: solid 1px #bebebe;">
                             <a href="">
-                                <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam expedita reiciendis eveniet iure quia et.</p>
                                 <i class="bi bi-arrow-right"></i>
+                                <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam expedita reiciendis eveniet iure quia et.</p>
                             </a>
                         </div>
                         <div class="mt-3">
@@ -684,7 +684,7 @@
                     </div>
                 </div>
                 <div class="col-md-7 d-flex justify-content-end align-items-center" style="background-color:#d69533;">
-                    <img style="opacity:1; width: 100%; height: 100%; object-fit: cover;" class="img-fluid" src="assets/images/news.png" alt="">
+                    <img style="opacity:0.9; width: 100%; height: 100%; object-fit: cover;" class="img-fluid" src="assets/images/news.png" alt="">
                 </div>
             </div>
         </div>
