--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             <a class="navbar-brand" href="#" style="position:fixed; top:30px; left: 8%;">
                 <img style="width:85%;" id="logo" src="assets/images/logo-white1_3.png" alt="" class="d-inline-block align-text-top">
             </a>
+            <a class="navbar-brand" href="#" style="position:fixed; top:30px; left: 8%;">
+                <img style="width:85%; opacity: 0;" id="logo2" src="assets/images/logo-white1_4.png" alt="" class="d-inline-block align-text-top">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -567,11 +570,11 @@
                 </div>
         </div>
     </div>
-    <div class="wrapper">
+    <div class="wrapper pb-5">
         <div class="factsContainer">
             <div class="factsContainer_sm">
                 <div class="fact">
-                    <div class="col-7">
+                    <div class="col-8">
                         <div class="case_study_card">
                             <h3>Case Study 1</h3>
                             <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
@@ -582,7 +585,7 @@
                     </div>
                 </div>
                 <div class="fact">
-                    <div class="col-7">
+                    <div class="col-8">
                         <div class="case_study_card">
                             <h3>Case Study 1</h3>
                             <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
@@ -593,7 +596,7 @@
                     </div>
                 </div>
                 <div class="fact">
-                    <div class="col-7">
+                    <div class="col-8">
                         <div class="case_study_card">
                             <h3>Case Study 2</h3>
                             <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
@@ -604,7 +607,7 @@
                     </div>
                 </div>
                 <div class="fact">
-                    <div class="col-7">
+                    <div class="col-8">
                         <div class="case_study_card">
                             <h3>Case Study 3</h3>
                             <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
@@ -615,7 +618,7 @@
                     </div>
                 </div>
                 <div class="fact">
-                    <div class="col-7">
+                    <div class="col-8">
                         <div class="case_study_card">
                             <h3>Case Study 4</h3>
                             <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
@@ -626,7 +629,7 @@
                     </div>
                 </div>
                 <div class="fact">
-                    <div class="col-7">
+                    <div class="col-8">
                         <div class="case_study_card">
                             <h3>Case Study 5</h3>
                             <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
@@ -637,9 +640,20 @@
                     </div>
                 </div>
                 <div class="fact">
-                    <div class="col-7">
+                    <div class="col-8">
                         <div class="case_study_card">
                             <h3>Case Study 6</h3>
+                            <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                            <p class="card__apply mt-5">
+                                <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="fact">
+                    <div class="col-8">
+                        <div class="case_study_card">
+                            <h3>Case Study 7</h3>
                             <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
                             <p class="card__apply mt-5">
                                 <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
@@ -652,11 +666,11 @@
     </div>
     <!-- newsroom / blog -->
     <section class="non-hero newsroom" style="padding:6% 0;">
-        <div class="container">
+        <div class="container newsContainer">
             <h2 class="text-center" style="margin-bottom: 60px;">Newsroom</h2>
             <div class="row g-0" style="border-radius: 15px;">
                 <div class="col">
-                    <div style="background-color:#168086; padding: 40px 40px; height: 100%;">
+                    <div style="background-color:#168086; padding: 50px 50px; height: 100%;">
                         <h5 style="color:#e3e3e3;">Latest updates</h5>
                         <div class="py-4 newsblock" style="border-bottom: solid 1px #bebebe;">
                             <a href="">
@@ -683,7 +697,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-7 d-flex justify-content-end align-items-center" style="background-color:#d69533;">
+                <div class="col-md-5 d-flex justify-content-end align-items-center" style="background-color:#d69533;">
                     <img style="opacity:0.9; width: 100%; height: 100%; object-fit: cover;" class="img-fluid" src="assets/images/news.png" alt="">
                 </div>
             </div>
@@ -745,7 +759,7 @@
             </div>
         </section> -->
     <!-- footer -->
-    <section style="background-color:rgb(23 62 96);">
+    <section class="footer" style="background-color:rgb(23 62 96);">
         <div class="container h-100 py-5">
             <div class="row m-0 py-5 h-100 align-items-center">
                 <footer>
