--- a/index.html
+++ b/index.html
@@ -666,9 +666,9 @@
     </div>
     <!-- newsroom / blog -->
     <section class="non-hero newsroom" style="padding:6% 0;">
-        <div class="container newsContainer">
-            <h2 class="text-center" style="margin-bottom: 60px;">Newsroom</h2>
-            <div class="row g-0" style="border-radius: 15px;">
+        <div class="container">
+            <h2 class="text-center newsContainer" style="margin-bottom: 60px;">Newsroom</h2>
+            <div class="row g-0 newsContainer" style="border-radius: 15px;">
                 <div class="col">
                     <div style="background-color:#168086; padding: 50px 50px; height: 100%;">
                         <h5 style="color:#e3e3e3;">Latest updates</h5>
