--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <div class="loader" id="my-loader" style="overflow-y: hidden;">
         <div class="loaderText">
             <h1 class="loaderMsg">
-                <span class="loaderSpan">Creating</span>
+                <span class="loaderSpan">Innovation</span>
             </h1>
             <h1 class="loaderMsg">
-                <span class="loaderSpan">Innovations For</span>
+                <span class="loaderSpan">Inspiration</span>
             </h1>
             <h1 class="loaderMsg">
-                <span class="loaderSpan">Everyday People</span>
+                <span class="loaderSpan">Insight</span>
             </h1>
             <img class="loaderLogo mt-3 ms-3" src="assets/images/cropped-logo1.png" alt="company-logo">
         </div>
