--- a/index.html
+++ b/index.html
@@ -674,20 +674,20 @@
                         <h5 style="color:#e3e3e3;">Latest updates</h5>
                         <div class="py-4 newsblock" style="border-bottom: solid 1px #bebebe;">
                             <a href="">
-                                <i class="bi bi-arrow-right"></i>
                                 <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam expedita reiciendis eveniet iure quia et.</p>
+                                <i class="bi bi-arrow-right"></i>
                             </a>
                         </div>
                         <div class="py-4 newsblock" style="border-bottom: solid 1px #bebebe;">
                             <a href="">
-                                <i class="bi bi-arrow-right"></i>
                                 <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam expedita reiciendis eveniet iure quia et.</p>
+                                <i class="bi bi-arrow-right"></i>
                             </a>
                         </div>
                         <div class="py-4 newsblock" style="border-bottom: solid 1px #bebebe;">
                             <a href="">
-                                <i class="bi bi-arrow-right"></i>
                                 <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam expedita reiciendis eveniet iure quia et.</p>
+                                <i class="bi bi-arrow-right"></i>
                             </a>
                         </div>
                         <div class="mt-3">
@@ -770,7 +770,7 @@
                             </div>
                         </div>
                         <div class="row py-3">
-                            <span class="caption pb-3 text-uppercase" style="color:#f5b04a; font-size: 13px;">Contact Details :</span>
+                            <span class="caption pb-3 text-uppercase" style="color:#f5b04a; font-size: 15px; letter-spacing: 1px;">Contact Details :</span>
                             <div class="col-md-4">
                                 <p class="styled-subtitle">Address : <a target="_blank" href="https://www.google.com/maps/dir//KARMA+GROUP+Above+Dhejung+Honda+Showroom+Babesa-Thimphu+Expressway+Thimphu/@27.4512679,89.6552072,16z/data=!4m8!4m7!1m0!1m5!1m1!1s0x39e193d365cd7211:0x27225fe531521d4e!2m2!1d89.6552072!2d27.4512679" title="View location">3Floor, Building 2, Norzin Lam, <br> PO Box 1570 Thimphu, Bhutan 11001</a></p>
                             </div>
@@ -782,7 +782,7 @@
                             </div>
                         </div>
                         <!--  <div class="row py-3 justify-content-between">
-                                <span class="caption pb-3 text-uppercase" style="color:#f5b04a; font-size: 13px;">We'd Love to Hear From You :</span>
+                                <span class="caption pb-3 text-uppercase" style="color:#f5b04a; font-size: 14px;">We'd Love to Hear From You :</span>
                                 <div class="col-md-6">
                                     <a href="">
                                         <svg class="myBtn-p" xmlns="http://www.w3.org/2000/svg" width="200" height="40" viewBox="0 0 220 60">
@@ -793,7 +793,7 @@
                                 </div>
                             </div> -->
                         <div class="row py-3 social">
-                            <span class="caption text-uppercase" style="color:#f5b04a; font-size: 13px;">Follow us on :</span>
+                            <span class="caption text-uppercase" style="color:#f5b04a; font-size: 15px; letter-spacing: 1px;">Follow us on :</span>
                             <ul class="list-unstyled">
                                 <li class="d-inline-block"><a href=""><i class="pe-2 fab fa-facebook-f"></i></a></li>
                                 <li class="d-inline-block ps-4"><a href=""><i class="pe-2 fab fa-instagram"></i></a></li>
