--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     <p class="sub-header mt-3 mb-3 text-white">Supporting digital transformations through information & technology.</p>
                     <!-- <p class="mb-5">iTechnologies, as your IT partner, can recommend the right technology from amongst many options and develop a IT roadmap based on the unique requirements, within the budget availability to support growth plans of an Organization. We offer independent and unbiased views by taking the time to gain a full and clear understanding of our Customer’s business – their objectives, issues, culture and people.</p> -->
                 </div>
-                <div class="col-lg-8 d-flex align-items-center flex-wrap">
+                <div class="col-lg-7 d-flex align-items-center flex-wrap">
                     <figure class="snip1584 fadeIn m-2 flex-grow-1">
                         <figcaption>
                             <i class="bi bi-app-indicator iservice"></i>
@@ -353,7 +353,7 @@
                         </figcaption><a class="tileClick" href="#"></a>
                     </figure>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-5 d-flex align-items-center">
                     <img id="servicesVector" style="opacity:0.8; transform:scale(1.2);" class="img-fluid" src="assets/images/illustration3.png" alt="">
                 </div>
             </div>
