--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body id="body">
     <!-- Loading screen -->
-    <div class="loader" id="my-loader" style="overflow-y: hidden;">
+    <div class="loader">
         <div class="loaderText">
             <h1 class="loaderMsg">
                 <span class="loaderSpan">Innovation</span>
@@ -778,10 +778,10 @@
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/gsap.min.js"></script>
     <script src="assets/js/ScrollTrigger.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
     <!-- custom js file -->
     <script src="script.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+    <script src="assets/js/owl.carousel.min.js"></script>
 </body>
 
 </html>
