--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body id="body">
     <!-- Loading screen -->
-    <div class="loader">
+    <div class="loader" id="my-loader">
         <div class="loaderText">
             <h1 class="loaderMsg">
                 <span class="loaderSpan">Innovation</span>
