--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                         </div>
                         <div class="col-12 p-2 text-center">
                             <p class="view_more">
-                                <a class="view_more_btn" href="#">Explore All<i class="fas fa-arrow-right ps-2"></i></a>
+                                <a class="view_more_btn" href="#">Explore All</a>
                             </p>
                         </div>
                     </div>
