--- a/verticals.html
+++ b/verticals.html
@@ -217,10 +217,15 @@
         <div>
             <h1 class="heroContent text-white mb-4">Creating Digital Transformations</h1>
             <div class="heroContent col-lg-7 mx-auto">
-                <p class="heroContent mb-5">We provide full scale IT consulting & software development services that help government and business to become more efficient and productive in carrying out their operations</p>
+                <p class="heroContent mb-4">We provide full scale IT consulting & software development services that help government and business to become more efficient and productive in carrying out their operations</p>
             </div>
             <div class="heroContent d-grid gap-2 d-flex justify-content-center">
-                <button class="snip1417">Get in touch</button>
+                <a style="text-decoration: none;" href="">
+                    <svg class="myBtn" xmlns="http://www.w3.org/2000/svg" width="300" height="50" viewBox="0 0 220 60">
+                        <rect x="0" y="0" width="60" height="60" rx="30" ry="30" fill="#eba63f" style="opacity: 0.9;" />
+                        <text transform="translate(105 38)" text-anchor="middle" font-size="18" fill="#fff">GET IN TOUCH</text>
+                    </svg>
+                </a>
             </div>
         </div>
         <div class="heroContent" style="position:absolute; bottom:10%;">
@@ -397,6 +402,81 @@
                 <div class="col-md-3 p-4">
                     <h6>12+</h6>
                     <p class="lead">Service Mangement Systems</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Verticals -->
+    <section class="sec3 panel" style="padding: 5% 0; background-color:#fff;">
+        <div class="container h-100 d-flex flex-column justify-content-center align-items-center">
+            <div class="col-12 non-hero text-white">
+                <span class="trigger_ps"></span>
+                <h2 class="text-center verticalsTitle">Verticals</h2>
+                <div class="col-10 mx-auto">
+                    <p class="sub-header my-4 verticalsTitle">iTechnologies, as your IT partner, can recommend the right technology from amongst many options and develop a IT roadmap based on the unique requirements, within the budget availability to support growth plans of an Organization.</p>
+                </div>
+                <!-- <p class="mt-3 mb-5" style="color:;">iTechnologies, as your IT partner, can recommend the right technology from amongst many options and develop a IT roadmap based on the unique requirements, within the budget availability to support growth plans of an Organization. We offer independent and unbiased views by taking the time to gain a full and clear understanding of our Customer’s business – their objectives, issues, culture and people.</p> -->
+            </div>
+            <div class="row pt-3">
+                <div class="col-6 p-2 d-flex flex-column justify-content-center align-items-center">
+                    <img class="fadeIn2" style="opacity:0.8; transform:scale(0.7);" class="img-fluid" src="assets/images/verticals-img.png" alt="">
+                </div>
+                <div class=" col">
+                    <div class="row" style="height:100%">
+                        <div class="col-6 p-2">
+                            <div class="cards fadeIn2">
+                                <div class="card">
+                                    <div class="card__icon"><i class="bi bi-info-lg"></i></i></div>
+                                    <h5 class="card__title">Document Management System</h5>
+                                    <p class="card__apply">
+                                        <a class="card__link" href="#">View Details <i class="fas fa-arrow-right"></i></a>
+                                    </p>
+                                    <a class="tileClick" href=""></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 p-2">
+                            <div class="cards fadeIn2">
+                                <div class="card">
+                                    <div class="card__icon"><i class="bi bi-info-lg"></i></i></div>
+                                    <h5 class="card__title">HR System</h5>
+                                    <p class="card__apply">
+                                        <a class="card__link" href="#">View Details <i class="fas fa-arrow-right"></i></a>
+                                    </p>
+                                    <a class="tileClick" href=""></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 p-2">
+                            <div class="cards fadeIn2">
+                                <div class="card">
+                                    <div class="card__icon"><i class="bi bi-info-lg"></i></i></div>
+                                    <h5 class="card__title">SMS Integration</h5>
+                                    <p class="card__apply">
+                                        <a class="card__link" href="#">View Details <i class="fas fa-arrow-right"></i></a>
+                                    </p>
+                                    <a class="tileClick" href=""></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 p-2">
+                            <div class="cards fadeIn2">
+                                <div class="card">
+                                    <div class="card__icon"><i class="bi bi-info-lg"></i></i></div>
+                                    <h5 class="card__title">Biometrics Software</h5>
+                                    <p class="card__apply">
+                                        <a class="card__link" href="#">View Details <i class="fas fa-arrow-right"></i></a>
+                                    </p>
+                                    <a class="tileClick" href=""></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 p-2 text-center">
+                            <p class="view_more">
+                                <a class="view_more_btn" href="#">Explore All</a>
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
