--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         </div>
     </section>
     <!-- partners / clients -->
-    <section id="partner" class="non-hero" style="padding:5% 0;">
+    <section id="partner" class="non-hero" style="padding:3% 0;">
         <h2 class="text-center" style="margin-bottom: 60px;">Our Clients</h2>
         <div class="owl-carousel owl-theme owl-1">
             <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
@@ -455,89 +455,91 @@
                 </div>
         </div>
     </div>
-    <div class="wrapper pb-5">
-        <div class="factsContainer">
-            <div class="factsContainer_sm">
-                <div class="fact">
-                    <div>
-                        <div class="case_study_card">
-                            <h3>Case Study 1</h3>
-                            <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                            <p class="card__apply mt-5">
-                                <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                            </p>
+    <!-- case study -->
+    <section class="caseStudy py-4" style="background-color:#493d78; position: relative;">
+        <div class="container">
+            <div class="owl-carousel owl-theme owl-2 caseOwl">
+                <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
+                    <div class="fact">
+                        <div>
+                            <div class="case_study_card">
+                                <h3>Case Study 1</h3>
+                                <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                                <p class="card__apply mt-5">
+                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="fact">
-                    <div>
-                        <div class="case_study_card">
-                            <h3>Case Study 1</h3>
-                            <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                            <p class="card__apply mt-5">
-                                <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                            </p>
+                <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
+                    <div class="fact">
+                        <div>
+                            <div class="case_study_card">
+                                <h3>Case Study 2</h3>
+                                <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                                <p class="card__apply mt-5">
+                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="fact">
-                    <div>
-                        <div class="case_study_card">
-                            <h3>Case Study 2</h3>
-                            <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                            <p class="card__apply mt-5">
-                                <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                            </p>
+                <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
+                    <div class="fact">
+                        <div>
+                            <div class="case_study_card">
+                                <h3>Case Study 2</h3>
+                                <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                                <p class="card__apply mt-5">
+                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="fact">
-                    <div>
-                        <div class="case_study_card">
-                            <h3>Case Study 3</h3>
-                            <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                            <p class="card__apply mt-5">
-                                <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                            </p>
+                <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
+                    <div class="fact">
+                        <div>
+                            <div class="case_study_card">
+                                <h3>Case Study 4</h3>
+                                <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                                <p class="card__apply mt-5">
+                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="fact">
-                    <div>
-                        <div class="case_study_card">
-                            <h3>Case Study 4</h3>
-                            <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                            <p class="card__apply mt-5">
-                                <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                            </p>
+                <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
+                    <div class="fact">
+                        <div>
+                            <div class="case_study_card">
+                                <h3>Case Study 5</h3>
+                                <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                                <p class="card__apply mt-5">
+                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="fact">
-                    <div>
-                        <div class="case_study_card">
-                            <h3>Case Study 5</h3>
-                            <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                            <p class="card__apply mt-5">
-                                <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="fact">
-                    <div>
-                        <div class="case_study_card">
-                            <h3>Case Study 6</h3>
-                            <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                            <p class="card__apply mt-5">
-                                <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                            </p>
+                <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
+                    <div class="fact">
+                        <div>
+                            <div class="case_study_card">
+                                <h3>Case Study 6</h3>
+                                <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                                <p class="card__apply mt-5">
+                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- newsroom / blog -->
     <section class="non-hero newsroom" style="padding:6% 0;">
         <div class="container">
@@ -577,65 +579,10 @@
             </div>
         </div>
     </section>
-    <!--     <section class="non-hero" style="padding:5% 0;">
-        <div class="container">
-            <h2 class="text-center" style="margin-bottom: 60px;">Newsroom style 2</h2>
-            <div class="row">
-                <div class="col-md-3">
-                    <figure class="snip1208">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample66.jpg" alt="sample66" />
-                        <figcaption>
-                        <h3>The World Ended Yesterday</h3>
-                        <p>
-                            I don't need to compromise my principles, because they don't have the slightest bearing on what happens to me anyway.
-                        </p>
-                        <button>Read More</button>
-                        </figcaption><a href="#"></a>
-                    </figure>
-                </div>
-                <div class="col-md-3">
-                    <figure class="snip1208">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample66.jpg" alt="sample66" />
-                        <figcaption>
-                        <h3>The World Ended Yesterday</h3>
-                        <p>
-                            I don't need to compromise my principles, because they don't have the slightest bearing on what happens to me anyway.
-                        </p>
-                        <button>Read More</button>
-                        </figcaption><a href="#"></a>
-                    </figure>
-                </div>
-                <div class="col-md-3">
-                    <figure class="snip1208">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample66.jpg" alt="sample66" />
-                        <figcaption>
-                        <h3>The World Ended Yesterday</h3>
-                        <p>
-                            I don't need to compromise my principles, because they don't have the slightest bearing on what happens to me anyway.
-                        </p>
-                        <button>Read More</button>
-                        </figcaption><a href="#"></a>
-                    </figure>
-                </div>
-                <div class="col-md-3">
-                    <figure class="snip1208">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample66.jpg" alt="sample66" />
-                        <figcaption>
-                        <h3>The World Ended Yesterday</h3>
-                        <p>
-                            I don't need to compromise my principles, because they don't have the slightest bearing on what happens to me anyway.
-                        </p>
-                        <button>Read More</button>
-                        </figcaption><a href="#"></a>
-                    </figure>
-                </div>
-            </div>
-        </div>
-    </section> -->
     <!-- footer -->
     <section class="footer" style="background-color:rgb(23 62 96);">
-        <div class="container h-100 py-5">
-            <div class="row m-0 py-5 h-100 align-items-center">
+        <div class="container py-5">
+            <div class="row m-0 align-items-center">
                 <footer>
                     <div class="container">
                         <div class="row pb-5">
@@ -643,8 +590,8 @@
                                 <h3 class="text-center">Want to collaborate on a project?</h3>
                             </div>
                         </div>
-                        <div class="row py-3">
-                            <span class="caption pb-3 text-uppercase" style="color:#f5b04a; font-size: 15px; letter-spacing: 1px;">Contact Details :</span>
+                        <div class="row">
+                            <span class="caption pb-2 text-uppercase" style="color:#f5b04a; font-size: 14px; letter-spacing: 1px;">Contact Details :</span>
                             <div class="col-md-4">
                                 <p class="styled-subtitle">Address : <a target="_blank" href="https://www.google.com/maps/dir//KARMA+GROUP+Above+Dhejung+Honda+Showroom+Babesa-Thimphu+Expressway+Thimphu/@27.4512679,89.6552072,16z/data=!4m8!4m7!1m0!1m5!1m1!1s0x39e193d365cd7211:0x27225fe531521d4e!2m2!1d89.6552072!2d27.4512679" title="View location">3Floor, Building 2, Norzin Lam, <br> PO Box 1570 Thimphu, Bhutan 11001</a></p>
                             </div>
@@ -654,41 +601,29 @@
                             <div class="col-md-4">
                                 <p class="styled-subtitle">Email : <a href="mailto:info@karma.bt" title="">info@itechnologies.bt</a></p>
                             </div>
-                        </div>
-                        <!--  <div class="row py-3 justify-content-between">
-                            <span class="caption pb-3 text-uppercase" style="color:#f5b04a; font-size: 14px;">We'd Love to Hear From You :</span>
-                            <div class="col-md-6">
-                                <a href="">
-                                    <svg class="myBtn-p" xmlns="http://www.w3.org/2000/svg" width="200" height="40" viewBox="0 0 220 60">
-                                        <rect x="-35" y="0" width="180" height="60" rx="30" ry="30" fill="#f5b04a" style="opacity: 0.9;" />
-                                        <text transform="translate(52 38)" text-anchor="middle" font-size="20" fill="#fff">Contact us</text>
-                                    </svg>
+                            <div class="row social">
+                                <span class="caption text-uppercase pb-3" style="color:#f5b04a; font-size: 14px; letter-spacing: 1px;">Follow us on :</span>
+                                <ul class="list-unstyled p-0 m-0">
+                                    <li class="d-inline-block ps-3"><a href=""><i class="pe-2 fab fa-facebook-f"></i></a></li>
+                                    <li class="d-inline-block ps-4"><a href=""><i class="pe-2 fab fa-instagram"></i></a></li>
+                                    <li class="d-inline-block ps-4"><a href=""><i class="pe-2 fab fa-twitter"></i></a></li>
+                                    <li class="d-inline-block ps-4"><a href=""><i class="pe-2 fab fa-linkedin-in"></i></a></li>
+                                </ul>
+                            </div>
+                            <div class="text-center">
+                                <a href="#">
+                                    <i class="fa fa-angle-up p-0 m-0" style="color:greenyellow;"></i><br>
+                                    <span style="font-size:11px; letter-spacing:1px; color:greenyellow;">SCROLL TO TOP</span>
                                 </a>
                             </div>
-                        </div> -->
-                        <div class="row py-3 social">
-                            <span class="caption text-uppercase" style="color:#f5b04a; font-size: 15px; letter-spacing: 1px;">Follow us on :</span>
-                            <ul class="list-unstyled">
-                                <li class="d-inline-block"><a href=""><i class="pe-2 fab fa-facebook-f"></i></a></li>
-                                <li class="d-inline-block ps-4"><a href=""><i class="pe-2 fab fa-instagram"></i></a></li>
-                                <li class="d-inline-block ps-4"><a href=""><i class="pe-2 fab fa-twitter"></i></a></li>
-                                <li class="d-inline-block ps-4"><a href=""><i class="pe-2 fab fa-linkedin-in"></i></a></li>
-                            </ul>
-                        </div>
-                        <div class="row copyright mt-5">
-                            <div class="col-md-12 text-center">
-                                <p style="font-size: 12px;"> © Copyright 2021 <a href="http://karma.abitwebsites.com" title="Karma Group "> iTechnologies.</a> All Rights Reserved.
-                                    Website Designed and Developed by <a href="https://www.abit.bt" title="ABit Private Limited">ABit Private Limited.</a>
-                                </p>
+                            <div class="row copyright">
+                                <div class="col-md-12 text-center">
+                                    <p style="font-size: 12px;" class="pt-2 m-0"> © Copyright 2021 <a href="http://karma.abitwebsites.com" title="Karma Group "> iTechnologies.</a> All Rights Reserved.
+                                        Website Designed and Developed by <a href="https://www.abit.bt" title="ABit Private Limited">ABit Private Limited.</a>
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="text-center">
-                        <a href="#">
-                            <i class="fa fa-angle-up p-0 m-0"></i><br>
-                            <span style="font-size:11px; letter-spacing:1px;">SCROLL TO TOP</span>
-                        </a>
-                    </div>
                 </footer>
             </div>
         </div>
