--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
         </div>
     </section>
     <!-- Milestones -->
-    <section style="background-color:#438945; padding-bottom: 2%; padding-top:3%;">
+    <section style="background-color:#438945; padding-bottom: 3%; padding-top:3%;">
         <div class="container">
             <!--  <div class="mb-5 threeLines">
                 <div class="mx-auto my-2" style="width: 100px; height:2px; background-color: #d69533;"></div>
@@ -402,7 +402,7 @@
         </div>
     </section>
     <!-- partners / clients -->
-    <section id="partner" class="non-hero" style="padding:3% 0;">
+    <section id="partner" class="non-hero" style="padding:4% 0;">
         <h2 class="text-center" style="margin-bottom: 60px;">Our Clients</h2>
         <div class="owl-carousel owl-theme owl-1">
             <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
@@ -444,104 +444,93 @@
         </div>
     </section>
     <!-- case study -->
-    <div class="pinWrapper">
-        <div style="background-image: linear-gradient(rgba(58, 76, 111, 0.7), rgba(58, 76, 111, 0.7)), url(assets/images/bg-cs.jpg); background-position:center; background-size:cover; overflow: hidden; background-attachment: fixed; height: 100%;" class=" text-white d-flex flex-column justify-content-center align-items-center">
-            <h2 class="titleCaseStudy" style="letter-spacing: 2px; font-size:35px;">Case Studies</h1>
-                <div class="container titleCaseStudy d-flex justify-content-center align-items-center">
-                    <div class="chevron"></div>
-                    <div class="chevron"></div>
-                    <div class="chevron"></div>
-                    <p class="mt-3 mb-0" style="color:#fff; font-size: 9px;">KEEP SCROLLING</p>
-                </div>
-        </div>
-    </div>
-    <!-- case study -->
-    <section class="caseStudy py-4" style="background-color:#493d78; position: relative;">
-        <div class="container">
-            <div class="owl-carousel owl-theme owl-2 caseOwl">
-                <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
-                    <div class="fact">
-                        <div>
-                            <div class="case_study_card">
-                                <h3>Case Study 1</h3>
-                                <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                                <p class="card__apply mt-3">
-                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                                </p>
+    <div style="background-image: linear-gradient(rgba(58, 76, 111, 0.7), rgba(58, 76, 111, 0.7)), url(assets/images/bg-cs.jpg); background-position:center; background-size:cover; overflow: hidden; background-attachment: fixed; padding:5% 0;" class=" text-white d-flex flex-column justify-content-center align-items-center">
+        <h2 class="titleCaseStudy" style="letter-spacing: 2px; font-size:40px;">Case Studies</h1>
+            <div class="container mt-4">
+                <div class="owl-carousel owl-theme owl-2 caseOwl">
+                    <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
+                        <div class="fact">
+                            <div>
+                                <div class="case_study_card">
+                                    <h3>Case Study 1</h3>
+                                    <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                                    <p class="card__apply mt-3">
+                                        <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
-                    <div class="fact">
-                        <div>
-                            <div class="case_study_card">
-                                <h3>Case Study 2</h3>
-                                <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                                <p class="card__apply mt-3">
-                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                                </p>
+                    <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
+                        <div class="fact">
+                            <div>
+                                <div class="case_study_card">
+                                    <h3>Case Study 2</h3>
+                                    <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                                    <p class="card__apply mt-3">
+                                        <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
-                    <div class="fact">
-                        <div>
-                            <div class="case_study_card">
-                                <h3>Case Study 2</h3>
-                                <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                                <p class="card__apply mt-3">
-                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                                </p>
+                    <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
+                        <div class="fact">
+                            <div>
+                                <div class="case_study_card">
+                                    <h3>Case Study 2</h3>
+                                    <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                                    <p class="card__apply mt-3">
+                                        <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
-                    <div class="fact">
-                        <div>
-                            <div class="case_study_card">
-                                <h3>Case Study 4</h3>
-                                <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                                <p class="card__apply mt-3">
-                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                                </p>
+                    <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
+                        <div class="fact">
+                            <div>
+                                <div class="case_study_card">
+                                    <h3>Case Study 4</h3>
+                                    <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                                    <p class="card__apply mt-3">
+                                        <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
-                    <div class="fact">
-                        <div>
-                            <div class="case_study_card">
-                                <h3>Case Study 5</h3>
-                                <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                                <p class="card__apply mt-3">
-                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                                </p>
+                    <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
+                        <div class="fact">
+                            <div>
+                                <div class="case_study_card">
+                                    <h3>Case Study 5</h3>
+                                    <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                                    <p class="card__apply mt-3">
+                                        <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
-                    <div class="fact">
-                        <div>
-                            <div class="case_study_card">
-                                <h3>Case Study 6</h3>
-                                <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                                <p class="card__apply mt-3">
-                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                                </p>
+                    <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
+                        <div class="fact">
+                            <div>
+                                <div class="case_study_card">
+                                    <h3>Case Study 6</h3>
+                                    <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                                    <p class="card__apply mt-3">
+                                        <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+    </div>
     <!-- newsroom / blog -->
-    <section class="non-hero newsroom" style="padding:3% 0;">
+    <section class="non-hero newsroom" style="padding:4% 0;">
         <div class="container">
             <h2 class="text-center newsContainer" style="margin-bottom: 28px;">Newsroom</h2>
             <div class="row g-0 newsContainer" style="border-radius: 15px;">
